@@ -1594,11 +1594,13 @@ public:
 
 	virtual s32 getInt() _IRR_OVERRIDE_
 	{
-		for (u32 i=0; EnumLiterals.size(); ++i)
+		for (u32 i=0; i < EnumLiterals.size(); ++i)
+		{
 			if (Value.equals_ignore_case(EnumLiterals[i]))
 			{
 				return (s32)i;
 			}
+		}
 
 		return -1;
 	}
